--- a/package.json
+++ b/package.json
@@ -6,16 +6,34 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.26.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "knex": "^1.0.4",
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "client:start": "react-scripts start",
+    "client:build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server:start": "node server.js",
+    "server:dev": "nodemon server.js",
+    "start": "yarn server:start",
+    "build": "yarn client:build",
+    "makeMigrate": "knex migrate:make",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "makeSeed": "knex seed:make",
+    "runSeed": "knex seed:run"
   },
   "eslintConfig": {
     "extends": [
